tests/snapshots/run_wpt_conformance__litert_concat_two_float32_5D_tensors_of_same_others_dimensions_except_different_2nd_dimension_along_axis_1.snap
---
source: tests/run_wpt_conformance.rs
assertion_line: 52
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "concat.https.any.js",
    "concat two float32 5D tensors of same others dimensions except different 2nd dimension along axis 1",
    "litert",
    "PASS",
)
